[package]
authors = ["Federico Rinaldi <gisquerin@gmail.com>"]
edition = "2018"
name = "bevy_prototype_lyon_showcase"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4.0"
bevy_egui = "0.2.0"
bevy_prototype_lyon = "0.2.0"
bevy_rapier2d = "0.8.0"
