[package]
authors = ["Federico Rinaldi <gisquerin@gmail.com>"]
categories = ["game-engines", "graphics", "rendering"]
description = "Bevy app showing bevy_prototype_lyon features"
edition = "2018"
keywords = ["game", "shapes", "gamedev", "graphics", "bevy"]
license = "MIT"
name = "bevy_prototype_lyon_showcase"
readme = "README.md"
repository = "https://github.com/Nilirad/bevy_prototype_lyon_showcase/"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = ["bevy_webgl2"]

[dependencies]
bevy = {version = "0.4.0", default_features = false}
bevy_egui = "0.2.0"
bevy_prototype_lyon = "0.2.0"
bevy_rapier2d = "0.8.0"
bevy_webgl2 = {version = "0.4.3", optional = true}
getrandom = {version = "0.1", features = ["wasm-bindgen"]}
rand = {version = "0.8", features = ["getrandom"]}
